       "Compilations" in the Artist filter tab. Thanks to Iain Benson!

       NEW: Window for display of track details. Non-stable with known
       issues (no sync of data between main display and details
       display -> deleting of tracks with the details window open may
       segfault the appliction if the details window consequently
       attempts to access the track and similar).

       NEW: Display of thumbnail images. Choose "Show Details" from
       the context menu (right mouse-button).

       NEW: very basic iPod video support (you can add Videos but no
       metadata is filled in). Thanks to Uwe Herman for the input.

       NEW: script to sync contacts from a Palm (via jppy
       http://wiki.zanu.org.uk/jppy). Thanks to Nick Piper,
       http://www.nickpiper.co.uk/)

       NEW: transition to libgpod to read/write iTunesDB. See
       www.gtkpod.org/libgpod.html for details.

       IMPROVEMENT: added comment, category, description, podcast url,
       podcast rss, subtitle fields and release date to displayable
       fields.

       IMPROVEMENT: Support playcounts on iPod Shuffle as well

       IMPROVEMENT: Remember size of 'Edit Smart Playlist' dialog and
       use scrolled window for the rules display.

       IMPROVEMENT: Update smart playlists automatically (on
       load/display/save) if 'live updating' is set.

       IMPROVEMENT: Support for more mp3 file tags: Compilation
       (TCMP), Podcast URL/Title (TID), Podcast Description (TDS),
       Podcast Subtitle (TT3), Podcast RSS (WFD), Podcast Release Date
       (TDR). Mostly reading only because of limited support on
       id3tag's side.

       UPDATED: Italian translation (thanks to Edward Matteucci)

       BUGFIX: 'Check iPod's files' could crash under certain
       circumstances (thanks to David Mansfield for the patch).

       BUGFIX: Lame's Replay Gain was read incorrectly for certain
       values. Thanks to Chris Brotherton for tracking this down.
