@@ -1,4 +1,4 @@
-/* Time-stamp: <2005-06-17 22:12:18 jcs>
+/* Time-stamp: <2005-11-27 19:05:47 jcs>
 |
 |  Copyright (C) 2002-2005 Jorg Schuler <jcsjcs at users sourceforge net>
 |  Part of the gtkpod project.
@@ -41,6 +41,7 @@
 
 void create_add_files_dialog(void);
 void create_add_playlists_dialog(void);
+gchar *fileselection_get_cover_filename(void);
 
 /* dirbrowser */
 void dirbrowser_block (void);
